--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4 text-center">授業カレンダー登録ツール（多摩美専用）</h1>
+        <h1 class="mb-4 text-center">授業カレンダー登録ツール</h1>
+        <h2 class="mb-4 text-center">多摩美専用</h2>
         <p class="text-center text-muted">日付と時限を元に、Googleカレンダーへの登録リンクを生成します。</p>
 
         <div class="card p-4">
