--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <div class="container mt-5">
         <h1 class="mb-4 text-center">授業カレンダー登録ツール</h1>
         <h2 class="mb-4 text-center">多摩美専用</h2>
-        <p class="text-center text-muted">日付と時限を元に、Googleカレンダーへの登録リンクを生成します。</p>
-
+        <p class="text-center text-muted">日付と時限を元に、Googleカレンダーへ予定を一括登録するためのカレンダーファイルを生成します。</p>
         <div class="card p-4">
             <div class="mb-3">
                 <label for="className" class="form-label">授業名</label>
