--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="card p-4">
             <div class="mb-3">
                 <label for="className" class="form-label">授業名</label>
-                <input type="text" class="form-control" id="className" placeholder="例：情報科学">
+                <input type="text" class="form-control" id="className" placeholder="例：インフォグラフィックス基礎">
             </div>
             <hr>
             <div class="row">
