--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>授業カレンダー登録ツール（多摩美専用）</title>
+    <title>【大学の授業用】カレンダー登録ツール</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -25,10 +25,16 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4 text-center">授業カレンダー登録ツール</h1>
-        <h2 class="mb-4 text-center">多摩美専用</h2>
-        <p class="text-center text-muted">日付と時限を元に、Googleカレンダーへ予定を一括登録するためのカレンダーファイルを生成します。</p>
+        <h1 class="mb-4 text-center">【大学の授業用】カレンダー登録ツール</h1>
+        <p class="text-center text-muted">日付と時限を元にカレンダーファイルを生成します。Googleカレンダーへ予定を一括で登録できて便利です。</p>
         <div class="card p-4">
+            <div class="mb-3">
+                <label for="university" class="form-label">大学を選択</label>
+                <select class="form-select" id="university">
+                    <option value="">-- 大学を選択してください --</option>
+                </select>
+            </div>
+            <hr>
             <div class="mb-3">
                 <label for="className" class="form-label">授業名</label>
                 <input type="text" class="form-control" id="className" placeholder="例：インフォグラフィックス基礎">
@@ -44,27 +50,8 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">時限（複数選択可）</label>
-                <div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="period1" value="1">
-                        <label class="form-check-label" for="period1">1限</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="period2" value="2">
-                        <label class="form-check-label" for="period2">2限</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="period3" value="3">
-                        <label class="form-check-label" for="period3">3限</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="period4" value="4">
-                        <label class="form-check-label" for="period4">4限</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="period5" value="5">
-                        <label class="form-check-label" for="period5">5限</label>
-                    </div>
+                <div id="periodsContainer">
+                    <p class="text-muted small">大学を選択してください</p>
                 </div>
             </div>
             <div class="d-grid">
