UI文言の調整

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4 text-center">【大学の授業用】カレンダー登録ツール</h1>
+        <h1 class="mb-4 text-center">【大学の授業用】<br />カレンダー登録ツール</h1>
         <p class="text-center text-muted">日付と時限を元にカレンダーファイルを生成します。Googleカレンダーへ予定を一括で登録できて便利です。</p>
         <div class="card p-4">
             <div class="mb-3">
@@ -36,13 +36,13 @@
             </div>
             <hr>
             <div class="mb-3">
-                <label for="className" class="form-label">授業名</label>
+                <label for="className" class="form-label">授業名を入力</label>
                 <input type="text" class="form-control" id="className" placeholder="例：インフォグラフィックス基礎">
             </div>
             <hr>
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <label for="eventDates" class="form-label">日付（1行に1つずつ入力）</label>
+                    <label for="eventDates" class="form-label">日付を入力（1行に1つずつ）</label>
                     <textarea class="form-control" id="eventDates" rows="5" placeholder="2025-09-10
 2025-09-17
 2025-09-24"></textarea>
